--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <img class="logo" src="./Images/logo.png" alt="logo" />
         <div class="navigation">
-          <a href="#">About</a>
+          <a href="aboutus.html">About</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
           <a href="#">FAQ</a>
