--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     
                     </div>
 
-                    <div class="articlecontainer">
+                    <div class="articlecontainer"></a>
                       <div class="txtcontainer"> 
                         <h5>LATEST ARTICLE</h5>
                         <h4>Read Latest Updates</h4>
