--- a/aboutus.html
+++ b/aboutus.html
@@ -11,9 +11,13 @@
   <body>
     <section>
       <header>
-        <div>
-         <a href="./index.html"><img class="logo" src="./Images/logo.png" alt="logo" /></a>
-        </div>
+
+        <a href="./index.html"><img class="logo" src="./Images/logo.png" alt="logo" /></a>
+        <input type="checkbox" class="check" id="toggle" />
+          <label for="toggle" class="hamburger">
+            <i class="fa-solid fa-bars"></i>
+          </label>
+        
         <div class="navigation">
           <a href="index.html">Home</a>
           <a href="#">About</a>
