--- a/aboutus.html
+++ b/aboutus.html
@@ -28,60 +28,61 @@
         </div>
       </header>
 
-      <div id="aboutcontainer" class="aboutcontainer"></div>
-      <div>
-        <h4 class="textourinfo">OUR INFO</h4>
-        <div class="ourinfocontainer">
-          <div class="innerlinediv"> 
-          <div class="innerline"></div>
-          <div class="imgntxt">
-            <img src="./Images/oladimeji.png" alt="" srcset="" />
-          </div>
-        </div>
-          <div class="infotxt">
-           <img src="./Images/greenquote.png" alt="" srcset="">
-            <p class="firsttxt">
-              ScholarRoom is an E-learning platform that automates all processes
-              around learning in an educational institution thus easing the
-              process thereby fostering distance/remote learning. Throughout the
-              application, certain features and elements were used.
-              Understanding these features and elements will help you use the
-              software more efficiently.
-            </p>
-            <p class="secondtxt">
-              ScholarRoom ia a cloud based learning management solution (LMS)
-              that allows training administrators to create,manage and deliver
-              online education
-            </p>
-            <a href="" class="ourinfobtn">contact us</a>
-          </div>
-        </div>
-      </div>
+<div id="aboutcontainer" class="aboutcontainer"> <img src="./Images/Group 33.png" alt="" srcset="">
+<h2>ABOUT US</h2>
+</div>
 
-      <div class="itworks">
-        <div class="itworkstxt">
-        <h4>HOW IT WORKS?</h4>
-        <P>Watch a demo to see how our software works</P>
-      </div>
-      <div class="demolink">
-        <img src="./Images/laptopframe.png" alt=""id="imageAsset"/>
-        <iframe width="290" height="165" src="https://www.youtube.com/embed/ZQCQINjHICc" 
-      title="YouTube video player" 
-      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-       gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-      </div>
-      <script>
-      function playVideo() {
-      var playBtn = document.getElementById("playButton");
-       var assetImage = document.getElementById("imageAsset")
-      if (playBtn.style.display === "none") {
-      playBtn.style.display = "block";
-       assetImage.style.display = "block";
-      } else {
-      playBtn.style.display = "none";
-      assetImage.style.display = "none";
-      }
-      }
+<div class="infogeneral">
+<div class="infoh">
+<h2>OUR INFO</h2>
+</div>
+<div class="imgandtxt">
+<div class="innerlinediv"> 
+<div class="innerline"></div>
+<img id="ola" src="./Images/oladimeji.png" alt=""></div>
+<div class="textandtxt">
+  <img id="greenquote" src="./Images/greenquote.png" alt="">
+<p id="schol" >ScholarRoom is an E-learning platform that automates all processes
+around learning in an educational institution thus easing the
+process thereby fostering distance/remote learning. Throughout the
+application, certain features and elements were used.
+Understanding these features and elements will help you use the
+software more efficiently.</p>
+
+<p id="arroom">ScholarRoom is a cloud based learning management solution (LMS)
+that allows training administrators to create,manage and deliver
+online education</p>
+
+<!-- <a href="" class="ourinfobtn">contact us</a> -->
+
+</div>
+</div>
+</div>
+
+<div class="itworks">
+  <div class="itworkstxt">
+  <h4>HOW IT WORKS?</h4>
+  <P>Watch a demo to see how our software works</P>
+</div>
+<div class="demolink">
+  <img src="./Images/laptopframe.png" alt=""id="imageAsset"/>
+  <iframe width="290" height="165" src="https://www.youtube.com/embed/ZQCQINjHICc" 
+title="YouTube video player" 
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+  gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+</div>
+<script>
+function playVideo() {
+var playBtn = document.getElementById("playButton");
+  var assetImage = document.getElementById("imageAsset")
+if (playBtn.style.display === "none") {
+playBtn.style.display = "block";
+  assetImage.style.display = "block";
+} else {
+playBtn.style.display = "none";
+assetImage.style.display = "none";
+}
+}
       
 </script>
     </section>
